<resources>
	<string name="app_name">Stickies</string>
	<string name="new_note">New Note</string>
	<string name="note_details">Note Details</string>

	<string name="notes_channel_name">Notes</string>

	<string name="note_num">Note №%1$d</string>

	<string name="title">Title</string>
	<string name="typeTitle">Type a title</string>
	<string name="typeMessage">Type a message</string>
	<string name="typeTopic">Type a topic</string>

	<string name="filter">Filter</string>
	<string name="filter_all">All</string>
	<string name="filter_important">Important</string>
	<string name="filter_topic">By topic</string>

	<string name="delete">Delete</string>
	<string name="share">Share</string>

	<string name="menu_important">Important</string>
	<string name="menu_completed">Completed</string>
	<string name="menu_unimportant">Regular</string>
	<string name="menu_uncompleted">In progress</string>

	<string name="menu_important_full">Mark as important</string>
	<string name="menu_completed_full">Mark as completed</string>
	<string name="menu_unimportant_full">Mark as regular</string>
	<string name="menu_uncompleted_full">Mark as in-progress</string>
	<string name="menu_colorpicker">Change a color</string>
	<string name="menu_schedule_reminder">Schedule a reminder</string>
	<string name="pick_reminder_time">Pick the reminder\'s time</string>

	<string name="search">Search</string>
	<string name="sort">Sort</string>
	<string name="sort_title">By title</string>
	<string name="sort_date_creation">By date of creation</string>
	<string name="order_asc">Ascending</string>
	<string name="order_desc">Descending</string>

	<string name="menu_import">Import</string>
	<string name="menu_export">Export</string>
	<string name="menu_cloudsync">Sync with cloud</string>

	<string name="alert_note_title_empty">Either title or message must be entered</string>
	<string name="alert_note_title_long">Note title is too long</string>
	<string name="alert_note_body_long">Note message is too long</string>

	<string name="list_empty_msg">The notes list is currently empty</string>
	<string name="hint_add_note_full">Click this to open a note form</string>
	<string name="hint_add_note_quick">Click this to add a quick note</string>

	<string name="hint_quick_note">Enter a quick note</string>

	<string name="sharing_title">Share the note with…</string>
	<string name="warning_no_app_to_share">You do not have any App to shere this note with</string>

	<string name="warning_no_app_intent">You do not have any appropriate App for this operation</string>

	<string name="text_style_bold" translatable="false"><b>B</b></string>
	<string name="text_style_italic" translatable="false"><i>I</i></string>
	<string name="text_style_underlined" translatable="false"><u>U</u></string>
	<string name="text_style_strikedthrough" translatable="false"><strike>S</strike></string>

	<string name="cancel">Cancel</string>
</resources>
