<?xml version="1.0" encoding="utf-8"?>

<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	>
	<item
		android:id="@+id/miSearch"
		android:icon="@drawable/ic_search"
		android:title="@string/search"
		app:showAsAction="always"
		app:actionViewClass="android.support.v7.widget.SearchView"
		/>
	<item
		android:id="@+id/filter"
		android:title="@string/filter"
		android:icon="@drawable/ic_filter"
		app:showAsAction="ifRoom"/>
	<item
		android:id="@+id/sort"
		android:title="@string/sort"
		android:icon="@drawable/ic_sort"
		app:showAsAction="collapseActionView"/>
	<item
		android:id="@+id/export_list"
		android:title="@string/menu_export"
		android:icon="@drawable/ic_export"
		app:showAsAction="collapseActionView"/>
	<item
		android:id="@+id/import_list"
		android:title="@string/menu_import"
		android:icon="@drawable/ic_import"
		app:showAsAction="collapseActionView"/>
</menu>