<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
	>
	<data>
		<variable
			name="viewModel"
			type="com.ancientlore.stickies.sortdialog.SortDialogViewModel"
			/>
	</data>
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:background="@android:color/white"
		android:orientation="vertical"
		>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			>
			<TextView
				android:text="@string/sort"
				android:layout_width="0dp"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:id="@+id/titleLabel"
				android:paddingTop="16dp"
				android:paddingBottom="16dp"
				android:paddingLeft="16dp"
				android:paddingRight="8dp"
				style="@style/TextAppearance.AppCompat.Title"
				android:paddingStart="16dp"
				android:paddingEnd="8dp"
				/>
			<TextView
				android:text="@={viewModel.orderField}"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:minWidth="100dp"
				android:gravity="center_vertical|end"
				android:id="@+id/sortOrderLabel"
				android:paddingLeft="16dp"
				android:paddingRight="16dp"
				android:onClick="@{() -> viewModel.onSwitchOrderClicked()}"
				tools:text="@string/order_asc"
				android:background="@drawable/ripple_effect_background"
				/>
		</LinearLayout>
		<TextView
			android:text="@string/sort_title"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/alphabetButton"
			android:minWidth="300dp"
			style="@style/sortAlertItem"
			app:layout_constraintTop_toBottomOf="@+id/titleLabel"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			android:onClick="@{() -> viewModel.onByTitleClicked()}"
			android:background="@drawable/ripple_effect_background"
			/>
		<TextView
			android:text="@string/sort_date_creation"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/dateButton"
			android:layout_marginBottom="16dp"
			android:minWidth="300dp"
			style="@style/sortAlertItem"
			app:layout_constraintTop_toBottomOf="@+id/alphabetButton"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			android:onClick="@{() -> viewModel.onByDateCreationClicked()}"
			android:background="@drawable/ripple_effect_background"
			/>
	</LinearLayout>
</layout>